[tool.poetry]
name = "chance-sc2"
version = "0.1.0"
description = ""
authors = ["lladdy <randallboland@bigpond.com>"]
readme = "README.md"
#packages = [{include = "chance_sc2"}]

[tool.poetry.dependencies]
python = "3.12.*"
loguru = "*"
s2clientprotocol = "*"
protobuf = "*"
portpicker = "*"
aiohttp = "*"
mpyq = "*"
numpy = "*"
scipy = "*"
scikit-learn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
